# DyFuse_model

./: CMakeLists.txt  README.md  cori_modules.sh
apps/: CMakeLists.txt
apps/_old/concurrency-control/: spu-ctx-tricnt.cpp  spu-ctx.c  spu-par-task.c
apps/_old/simple/: CMakeLists.txt  mxm-blocked_v-test.c  mxm-hpctoolkit-blocked-omp.c  mxm-hpctoolkit-blocked.c  mxm-hpctoolkit.c  mxm-individual-blocks-2.c  mxm-individual-blocks.c  mxm-perf.c  mxm-replace.c  mxm-spu-variable-threads.cpp  mxm-stats-omp.c  mxm-stats.c  mxm.c  mxm.cpp
apps/betweenness-centrality/: CMakeLists.txt  bc.c  bc.cpp
apps/bfs/: CMakeLists.txt  multisource.c  multisource.cpp
apps/concurrency-control/: CMakeLists.txt  omp-spu-test.c  omp-test.c  spu-clusters.c  spu-ctx-tricnt.cpp  spu-dummy.cpp
apps/examples/: B1.c  B1.cpp  B5.c  B7.c  B7.cpp  CMakeLists.txt
apps/kronecker/: kronecker.c
apps/mytest/: omp.c
apps/scheduler/: CMakeLists.txt  ConcurrencyControlComponent.cpp  ConcurrencyControlComponent.h  ControlTask.cpp  ControlTask.h  PinThreadsTask.cpp  PinThreadsTask.h  Scheduler.cpp  Scheduler.h  SchedulerArgs.h  SchedulingPolicy.cpp  SchedulingPolicy.h  main.cpp  scheduler-micro-benchmark.cpp
apps/simple/: CMakeLists.txt  block-features.cpp  block-profiling.cpp  common.h  mxm-individual-blocks_model.c
apps/simple_model/: CMakeLists.txt  feature_extraction.cpp  kron_scheduler.cpp  ktruss.c  ktruss_scheduler.cpp  mxm-individual-blocks_model.c  mxm-scheduler.cpp  mxm-spu-variable-threads.cpp  mxm_scheduler.cpp  spgemm_scheduler.cpp  spgemm_train_complement_model_scheduler.cpp  spgemm_train_model_scheduler.cpp  tricnt_train_model_scheduler.cpp
apps/stats/: CMakeLists.txt  kron-blocked.c  omp-thread-pool.c  stats-baseline.c  stats-omp.c  stats-spu-noaff.c  stats-spu.c  stats.c
apps/tricount/: CMakeLists.txt  tricount-omp.c  tricount.c  tricount.cpp  tricount_model.c
apps/util/: GrB_util.h  block_features.h  block_matrix.h  block_matrix_feature.h  block_matrix_generic.h  block_matrix_generic_feature.h  block_matrix_v.h  common.h  common_feature.h  exec_info.h  get_feature.h  reader_c.h  reader_cxx.h  timer.h
include/grb/: grb.h
include/grb/context/: Context.h  OpInternalClone.h  OpWait.h  Operation.h
include/grb/grb-operations/: OpApplyMatrix.h  OpApplyMatrixBinaryOp.h  OpApplyVector.h  OpApplyVectorBinaryOp.h  OpAssignMatrixValue.h  OpAssignVectorValue.h  OpCtor.h  OpElemWiseMatrix.h  OpElemWiseType.h  OpElemWiseVector.h  OpExtractMatrix.h  OpMxM.h  OpMxV.h  OpReduceMatrixScalar.h  OpReduceMatrixVector.h  OpReduceVectorScalar.h  OpSelectMatrix.h  OpVxM.h  ops.h
include/grb/objects/: Matrix.h  MatrixData.h  MatrixImpl.h  Vector.h  VectorData.h  VectorImpl.h  traits.h
include/grb/util/: GraphBLASImpl.h  GraphVizUtil.h  Util.h
model/: process_traindata_for_MLP.py  spgemm_maskA.py  tricnt_mxm_w_mask.py  validate.py
model/data/ancilla_classification_5/: 1D_thres_faster_base64_class_16_train_data_spgemm.csv  1D_thres_faster_base64_class_16_train_data_spgemm_mask.csv  1D_thres_faster_base64_class_16_train_data_spgemm_mask_comp.csv  1D_thres_faster_base64_class_16_train_data_tricnt.csv  1D_thres_faster_base64_class_1_train_data_spgemm.csv  1D_thres_faster_base64_class_1_train_data_spgemm_mask.csv  1D_thres_faster_base64_class_1_train_data_spgemm_mask_comp.csv  1D_thres_faster_base64_class_1_train_data_tricnt.csv  1D_thres_faster_base64_class_32_train_data_spgemm.csv  1D_thres_faster_base64_class_32_train_data_spgemm_mask.csv  1D_thres_faster_base64_class_32_train_data_spgemm_mask_comp.csv  1D_thres_faster_base64_class_32_train_data_tricnt.csv  1D_thres_faster_base64_class_64_train_data_spgemm.csv  1D_thres_faster_base64_class_64_train_data_spgemm_mask.csv  1D_thres_faster_base64_class_64_train_data_spgemm_mask_comp.csv  1D_thres_faster_base64_class_64_train_data_tricnt.csv  1D_thres_faster_base64_class_8_train_data_spgemm.csv  1D_thres_faster_base64_class_8_train_data_spgemm_mask.csv  1D_thres_faster_base64_class_8_train_data_spgemm_mask_comp.csv  1D_thres_faster_base64_class_8_train_data_tricnt.csv
model/kernel/: __init__.py  data_loader.py  model_builder.py  model_loader.py
model/kernel/ancilla/: linear2_1D_thres_faster_base64_class_16_train_data_spgemm.csv  linear2_1D_thres_faster_base64_class_16_train_data_spgemm.csv.pkl  linear2_1D_thres_faster_base64_class_16_train_data_spgemm_mask_comp.csv  linear2_1D_thres_faster_base64_class_16_train_data_spgemm_mask_comp.csv.pkl  linear2_1D_thres_faster_base64_class_16_train_data_tri.csv.pkl  linear2_1D_thres_faster_base64_class_1_train_data_spgemm.csv  linear2_1D_thres_faster_base64_class_1_train_data_spgemm.csv.pkl  linear2_1D_thres_faster_base64_class_1_train_data_spgemm_mask.csv  linear2_1D_thres_faster_base64_class_1_train_data_spgemm_mask.csv.pkl  linear2_1D_thres_faster_base64_class_1_train_data_spgemm_mask_comp.csv  linear2_1D_thres_faster_base64_class_1_train_data_spgemm_mask_comp.csv.pkl  linear2_1D_thres_faster_base64_class_1_train_data_tri.csv  linear2_1D_thres_faster_base64_class_32_train_data_spgemm.csv  linear2_1D_thres_faster_base64_class_32_train_data_spgemm.csv.pkl  linear2_1D_thres_faster_base64_class_32_train_data_spgemm_mask_comp.csv  linear2_1D_thres_faster_base64_class_32_train_data_spgemm_mask_comp.csv.pkl  linear2_1D_thres_faster_base64_class_32_train_data_tri.csv.pkl  linear2_1D_thres_faster_base64_class_64_train_data_spgemm.csv  linear2_1D_thres_faster_base64_class_64_train_data_spgemm.csv.pkl  linear2_1D_thres_faster_base64_class_64_train_data_spgemm_mask.csv  linear2_1D_thres_faster_base64_class_64_train_data_spgemm_mask.csv.pkl  linear2_1D_thres_faster_base64_class_64_train_data_spgemm_mask_comp.csv  linear2_1D_thres_faster_base64_class_64_train_data_spgemm_mask_comp.csv.pkl  linear2_1D_thres_faster_base64_class_64_train_data_tri.csv.pkl  linear2_1D_thres_faster_base64_class_8_train_data_spgemm.csv  linear_1D_thres_1.2x_faster_class_16_train_data_mxm.csv  (+136 more)
model/res/: res_srdan_tri_1013_summary  res_srdan_tri_1013_summary_1
src/: CMakeLists.txt
src/ast/: OpMxM.cpp  Operation.cpp
src/context/: Context.cpp
(+23 files in other folders)
